Finished calc and printed total to DOM.

--- a/inspectionPrice.html
+++ b/inspectionPrice.html
@@ -12,14 +12,14 @@
     <div class="inspectionPricingInput">
       <form class="IP-mainform" autocomplete="off" onsubmit="return false">
         <input id="HomeSquareFootage" type="text" name="sqft" value="" placeholder="Square Footage"><br>
-        <input type="checkbox" name="condo" value="condo">Is this a condo?<br>
-        <input type="checkbox" name="newConst" value="newConst">Is a brand new home?<br>
+        <input id="condoCheck" type="checkbox" name="condo" value="condo">Is this a condo?<br>
+        <input id="newConst" type="checkbox" name="newConst" value="newConst">Is a brand new home?<br>
         <button id="submitButtonSQFT" name="submitbutton" type="submit">Submit Square Footage</button>
       </form>
       <br>
 
     </div>
-    <div id="PricingReturn">
+    <div id="pricingReturn">
     </div>
   </div>
 
