--- a/inspectionPrice.html
+++ b/inspectionPrice.html
@@ -10,7 +10,7 @@
       <i id="upper-corner-icon" class="fas fa-search-dollar"></i>
       <h2>Quick Quote For Your Inspection Price</h2>
       <!-- <hr> -->
-      <p>Our base inspection price is based on square footage of the home. Enter the square footage of the property to find the base price for your inspection.<br><br><i>This price does not include add-on inspections.</i></p>
+      <p>Our pre-purchase inspection price is based on square footage of the home. Enter the square footage of the property to find the base price for your inspection.<br><br><i>This price does not include add-on inspections.</i></p>
     </div>
     <div class="inspectionPricingInput">
       <form class="IP-mainform" autocomplete="off" onsubmit="return false">
@@ -24,7 +24,7 @@
         </div>
         <div class="formRow" id="checkbuttonID">
           <input class="priceCheckbox" id="newConst" type="checkbox" name="newConst" value="newConst">
-          <label for="newConst">  Is a brand new home?</label>
+          <label for="newConst">  Is it a brand new home?</label>
         </div>
         <div>
         <button id="submitButtonSQFT" name="submitbutton" type="submit">Find My Price</button>
